# duplicate

./: Cargo.toml  LICENSE.md  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: args.rs  cli.rs  layout.rs  main.rs  process.rs
src/ui/: app.rs  input.rs  mod.rs  pane.rs
