[package]
name = "duplicate-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Run N copies of a command and view their outputs side-by-side in one terminal."
repository = "https://github.com/BitrixStudio/duplicate"

[[bin]]
name = "duplicate"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"